# ZK-Governance-mask

./: README.md
circuits/: GovernanceMask.circom
contracts/: GovernanceMask.sol  MaskVerifier.sol
sdk/: GovernanceMask.ts
solana/programs/governance_mask/src/: lib.rs
solana/progrsms/governance_mask/: Cargo.toml
